--- a/CleanArchitectureMVC.Application/CleanArchitectureMVC.Application.csproj
+++ b/CleanArchitectureMVC.Application/CleanArchitectureMVC.Application.csproj
@@ -10,13 +10,14 @@
 
   <ItemGroup>
     <Folder Include="DTOs\" />
-    <Folder Include="Mappings\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Products\Handlers\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
